Página web en construcción

--- a/Pagina_Web/index.html
+++ b/Pagina_Web/index.html
@@ -16,11 +16,11 @@
 </div>
 
 <div class="contenido">
-<p>Contenido</p>   
+<p>Página en construcción</p>   
 </div>
 
 <footer>
-    <p>Este es el pie de página</p>
+    <h2>Desarrollado por IES Pablo Picasso</h2>
 </footer>  
 
 </body>
