Añado foto a la página web de desarrollo

--- a/Pagina_Web/index.html
+++ b/Pagina_Web/index.html
@@ -15,12 +15,13 @@
 <h2>Horario</h2>
 </div>
 
+<div class="foto"></div>
 <div class="contenido">
-<p>Contenido</p>   
+   
 </div>
 
 <footer>
-    <p>Este es el pie de página</p>
+    <h2>Este es el pie de página</h2>
 </footer>  
 
 </body>
